all-yaml-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-deployment
  namespace: static
spec:
  selector:
    matchLabels:
      app: static-dept
  replicas: 3 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: static-dept
    spec:
      containers:
      - name: static
        image: 861531569385.dkr.ecr.eu-central-1.amazonaws.com/k8s:number 
        ports:
        - containerPort: 80
